--- a/package.json
+++ b/package.json
@@ -20,24 +20,37 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/bluetooth-serial": "^4.5.2",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/local-notifications": "^4.5.2",
+    "@ionic-native/network": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "angular2-jwt": "^0.2.3",
+    "auth0-js": "^9.1.0",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.11",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "fitbit-node": "^2.1.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "pouchdb": "^6.4.1",
+    "pouchdb-adapter-cordova-sqlite": "^2.0.2",
+    "pouchdb-adapter-websql-core": "^6.4.1",
+    "pouchdb-find": "^6.4.1",
+    "pouchdb-upsert": "^2.2.0",
+    "rawmodel": "^1.31.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
+    "@types/jasmine": "^2.8.4",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
